# STLSoft-1.10

./: .gitignore  AUTHORS.md  AUTHORS.txt  CHANGES.txt  CMakeLists.txt  FAQ.md  FAQ.txt  HISTORY.md  HISTORY.txt  HOW_YOU_CAN_HELP.md  HOW_YOU_CAN_HELP.txt  INSTALL.md  INSTALL.txt  KNOWN_ISSUES.md  KNOWN_ISSUES.txt  LICENSE  LICENSE.txt  NEWS.md  NEWS.txt  README.md  README.txt  TODO.md  TODO.txt  build_cmake.sh  clean_cmake.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_unit_tests.sh
cmake/: BuildType.cmake  TargetMacros.cmake
examples/: CMakeLists.txt
include/acestl/: acestl.hpp
include/acestl/collections/: message_queue_sequence.hpp
include/acestl/memory/: message_block_functions.hpp
include/acestl/network/: socket_functions.hpp
include/acestl/reactor/: custom_event_handler.hpp
include/atlstl/: atlstl.hpp
include/atlstl/automation/: automation_collections.hpp  enumerators.hpp  multiple_dispatch.hpp  property_method_helpers.hpp
include/atlstl/error/: support_error_info.hpp
include/atlstl/string/: CComBSTR_veneer.hpp  CComBTR_veneer.hpp  ccombstr_veneer.hpp  string_traits.hpp
include/atlstl/util/: module_scope.hpp
include/atlstl/window/: about_dialog.hpp  enhanced_window.hpp  window.hpp
include/comstl/: comstl.h
include/comstl/auto/: dispatch_functions.h
include/comstl/collections/: collection_sequence.hpp  enumeration_policies.hpp  enumerator_sequence.hpp  safearray_sequence.hpp
include/comstl/conversion/: interface_cast.hpp  method_cast.hpp
include/comstl/error/: bad_interface_cast.hpp  errorinfo_desc.hpp  errorinfo_functions.h  excepinfo_functions.h  exceptions.hpp
include/comstl/exception/: bad_interface_cast.hpp  comstl_exception.hpp  throw_policies.hpp  variant_type_exception.hpp
include/comstl/functional/: com_predicate_adaptors.hpp  functionals.hpp  interface_functionals.hpp  type_functionals.hpp
include/comstl/interface/: bad_interface_cast.hpp  interface_cast.hpp  interface_traits.hpp
include/comstl/internal/: interface_traits_std_.hpp
include/comstl/memory/: functions.h  task_allocator.hpp
include/comstl/security/: security_initialisers.hpp
include/comstl/smartptr/: interface_ptr.hpp
include/comstl/speech/: sapi_util.hpp
include/comstl/string/: BSTR_functions.h  bstr.hpp  olestring_functions.h
include/comstl/typelib/: TypeInfo_resource_scope.hpp  functions.hpp
include/comstl/util/: CY_functions.h  DECIMAL_functions.h  GUID_functions.h  VARIANT_functions.h  acyclic_connector.hpp  creation_functions.hpp  guid.hpp  initialisers.hpp  interface_traits.hpp  object_functions.h  refcount_functions.h  rot_functions.h  stream_functions.h  thread_marshal.hpp  value_policies.hpp  variant.hpp
include/inetstl/: inetstl.h
include/inetstl/error/: exceptions.hpp
include/inetstl/exception/: inetstl_exception.hpp  throw_policies.hpp
include/inetstl/filesystem/: filesystem_traits.hpp  findfile_sequence.hpp  ftpdir_sequence.hpp  functionals.hpp  searchspec_sequence.hpp
include/inetstl/network/: connection.hpp  session.hpp
include/mfcstl/: mfcstl.hpp
include/mfcstl/collections/: CArray_adaptors.hpp  CArray_swap.hpp  CArray_traits.hpp  CList_adaptors.hpp  CList_swap.hpp  CList_traits.hpp  CString_adaptors.hpp  carray_adaptors.hpp  carray_swap.hpp  carray_traits.hpp  clist_adaptors.hpp  clist_swap.hpp  clist_traits.hpp  cstring_adaptors.hpp
include/mfcstl/memory/: afx_allocator.hpp
include/mfcstl/string/: grab_CString_buffer.hpp  grab_cstring_buffer.hpp  resource_string.hpp  string_traits.hpp
include/mfcstl/util/: memory_exception_translation_policies.hpp
include/platformstl/: platformstl.h  platformstl.hpp
include/platformstl/diagnostics/: processtimes_stopwatch.hpp  stopwatch.hpp
include/platformstl/dl/: module.hpp
include/platformstl/error/: error_desc.hpp  exceptions.hpp
include/rangelib/: algorithms.hpp  associative_range.hpp  basic_indirect_range_adaptor.hpp  cstring_range.hpp  exceptions.hpp  filtered_range.hpp  filtered_sequence.hpp  indexed_range.hpp  integral_range.hpp  iterator_range.hpp  operator_adaptors.hpp  random_range.hpp  range_categories.hpp  rangelib.hpp  salgorithms.hpp  sequence_range.hpp
include/stlsoft/: algorithms.hpp  stlsoft.h
include/unixstl/: unixstl.h
include/winstl/: winstl.h
include/wtlstl/: wtlstl.hpp
test/: CMakeLists.txt
test/scratch/: CMakeLists.txt
test/scratch/unixstl/: CMakeLists.txt
test/scratch/unixstl/synch/: CMakeLists.txt
test/scratch/unixstl/synch/semaphore/: CMakeLists.txt  main.cpp
test/scratch/versions/: CMakeLists.txt  versions.cpp
test/scratch/versions/versions.iostreams/: CMakeLists.txt  versions.cpp
test/scratch/versions/versions.stdio/: CMakeLists.txt  versions.c
test/unit/: CMakeLists.txt
test/unit/stlsoft/: CMakeLists.txt
test/unit/stlsoft/containers/: CMakeLists.txt
test/unit/stlsoft/containers/test.unit.stlsoft.containers.frequency_map/: CMakeLists.txt  entry.cpp
test/unit/stlsoft/containers/test.unit.stlsoft.containers.pod_vector/: CMakeLists.txt  entry.cpp
test/unit/stlsoft/conversion/: CMakeLists.txt
test/unit/stlsoft/conversion/test.unit.stlsoft.conversion.byte_format_functions/: CMakeLists.txt  entry.cpp
test/unit/stlsoft/memory/: CMakeLists.txt
test/unit/stlsoft/memory/test.unit.stlsoft.memory.auto_buffer/: CMakeLists.txt  entry.cpp
test/unit/stlsoft/string/: CMakeLists.txt
test/unit/stlsoft/string/test.unit.stlsoft.string.shim_string/: CMakeLists.txt  entry.cpp
test/unit/stlsoft/string/test.unit.stlsoft.string.simple_string/: CMakeLists.txt  entry.cpp
test/unit/stlsoft/string/test.unit.stlsoft.string.static_string/: CMakeLists.txt  entry.cpp
test/unit/stlsoft/string/test.unit.stlsoft.string.string_slice/: CMakeLists.txt  entry.cpp
test/unit/stlsoft/string/test.unit.stlsoft.string.string_view/: CMakeLists.txt  entry.cpp
test/unit/stlsoft/string/test.unit.string.simple_string/: CMakeLists.txt  entry.cpp
test/unit/unixstl/: CMakeLists.txt
test/unit/unixstl/filesystem/: CMakeLists.txt
test/unit/unixstl/filesystem/test.unit.unixstl.filesystem.path/: CMakeLists.txt  entry.cpp
(+792 files in other folders)
