
add_subdirectory(test.unit.stlsoft.string.shim_string)
add_subdirectory(test.unit.stlsoft.string.simple_string)
add_subdirectory(test.unit.stlsoft.string.static_string)
add_subdirectory(test.unit.stlsoft.string.string_slice)
add_subdirectory(test.unit.stlsoft.string.string_view)


# ############################## end of file ############################# #

